# HCR-Imaging-Python-Module

./: .gitattributes  .gitmodules  LICENSE.txt  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
examples/: .gitattributes  dot-detection-example.ipynb  mouse-brain-unmixing-example.ipynb  mouse-brain-unmixing-matrix-example.ipynb  unmixing-matrix.npy  zebrafish-unmixing-example.ipynb  zebrafish-unmixing-example.sdm  zebrafish-unmixing-matrix-example.ipynb
hcr_imaging/: __init__.py
hcr_imaging/core/: align.py  arrays.py  colors.py  common.py  files.py  gui.py  image.py  low_rank.py  nmf.py  zeiss.py
hcr_imaging/dots/: __init__.py
hcr_imaging/source/: BoundSolve.h  Cholesky.h  Common.h  Gaussian.h  Module.cc
hcr_imaging/templates/: callbacks.js
hcr_multiplexed_imaging/core/: __init__.py  gui.py  image.py  io.py  leica.py
hcr_multiplexed_imaging/dots/: coloc.py  gmm.py
hcr_multiplexed_imaging/source/: BoundSolve.h  Cholesky.h  Common.h  Gaussian.h  Module.cc
