[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hcr_multiplexed_imaging"  
authors = [
    {name = "Mark E. Fornace", email = "mfornace@caltech.edu"}
]
license = {file = "LICENSE.txt"}
version = "1.0"
dependencies = [
    "matplotlib >= 3.0.0", 
    "seaborn", 
    "xarray", 
    "scipy", 
    "numpy", 
    "bokeh >= 3.0.0", 
    "read_lif", 
    "czifile", 
    "dask", 
    "autograd", 
    "scikit-learn", 
    "numexpr", 
    "scikit-image", 
    "lxml", 
    "tifffile"
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
hcr_multiplexed_imaging = ["templates/*.js"]

[tool.setuptools.exclude-package-data]
hcr_multiplexed_imaging = ["source/*"]

[tool.setuptools]
license-files = ["LICENSE.txt"]

[tool.cibuildwheel.linux]
before-all = "yum install -y blas-static"
environment = "HCR_MULTIPLEXED_IMAGING_BLAS=/usr/lib64/libblas.a"

[[tool.cibuildwheel.overrides]]
select = "*-musllinux*"
before-all = "apk add openblas-static"
environment = "HCR_MULTIPLEXED_IMAGING_BLAS=/usr/lib/libopenblas.a"
